maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:33: error: not found: value Largeur
  while (numMarques < Largeur*Hauteur) {
                      ^ShortestPathMaze:33: error: not found: value Hauteur
  while (numMarques < Largeur*Hauteur) {
                              ^ShortestPathMaze:35: error: not found: value Largeur
    for (X <- 1 to Largeur-1;Y <- 1 to Hauteur-1) {
                   ^ShortestPathMaze:35: error: not found: value Hauteur
    for (X <- 1 to Largeur-1;Y <- 1 to Hauteur-1) {
                                       ^